--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,21 @@ subprojects {
         testCompile 'junit:junit:4.12'
         testCompile 'org.mockito:mockito-core:2.0.2-beta'
     }
+
+    task sourcesJar(type: Jar, dependsOn: classes) {
+        classifier = 'sources'
+        from sourceSets.main.allSource
+    }
+
+    task javadocJar(type: Jar, dependsOn: javadoc) {
+        classifier = 'javadoc'
+        from javadoc.destinationDir
+    }
+
+    artifacts {
+        archives sourcesJar
+        archives javadocJar
+    }
 }
 
 project(':stroom-query-api') {
@@ -49,6 +64,7 @@ project(':stroom-query-common') {
     }
 }
 
+// Manually import JARs that are not available in a Maven repository
 import de.undercouch.gradle.tasks.download.Download
 task downloadStroomExpression(type: Download) {
     src "https://github.com/gchq/stroom-expression/releases/download/${stroomExpressionVersion}/stroom-expression-${stroomExpressionVersion}.jar"
