--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,10 @@ plugins {
     id "de.undercouch.download" version "3.2.0"
 }
 
+task wrapper(type: Wrapper) {
+    gradleVersion = '3.5'
+}
+
 def stroomExpressionVersion = '6.0-beta.1-SNAPSHOT'
 
 allprojects {
