--- a/build.gradle
+++ b/build.gradle
@@ -6,14 +6,14 @@ task wrapper(type: Wrapper) {
     gradleVersion = '3.5'
 }
 
-def stroomExpressionVersion = '6.0-beta.1-SNAPSHOT'
+def stroomExpressionVersion = 'v1.0.0-SNAPSHOT.1'
 
 allprojects {
     apply plugin: 'maven'
     apply plugin: 'maven-publish'
 
     group = 'stroom'
-    version = '6.0-beta.1-SNAPSHOT'
+    version = 'v1.0.0-SNAPSHOT.1'
 }
 
 subprojects {
