--- a/build.gradle
+++ b/build.gradle
@@ -6,15 +6,15 @@ task wrapper(type: Wrapper) {
     gradleVersion = '3.5'
 }
 
-def stroomExpressionVersion = 'v1.0.0-SNAPSHOT.1'
-
 allprojects {
     apply plugin: 'maven'
     apply plugin: 'maven-publish'
 
     group = 'stroom'
-    version = 'v1.0.0-SNAPSHOT.1'
+    version = 'v1.0.0-SNAPSHOT.2'
 }
+
+ext.stroomExpressionVersion = 'v1.0.0-SNAPSHOT.1'
 
 subprojects {
     apply plugin: 'java'
