Update CI build

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,9 @@ deploy:
   skip_cleanup: true
   on:
     tags: true
+  # We want to overwrite the files we produce for the release
+  # - this means we can keep pushing the SNAPSHOT tag and re-realising the jars.
+  overwrite: true
 
 cache:
   directories:
