--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,10 @@ allprojects {
     apply plugin: 'maven-publish'
 
     group = 'stroom'
-    version = 'v1.0.0-SNAPSHOT'
+    version = 'v0.1.0'
 }
 
-ext.stroomExpressionVersion = 'v1.0.0-SNAPSHOT.1'
+ext.stroomExpressionVersion = 'v0.1.0'
 
 subprojects {
     apply plugin: 'java'
