Fixed DocRef equals and hashcode methods and made some minor code improvements as a result of analysis. Updated version to v0.1.1.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .gradle/
 **/target
 libs/
-classes
+classes/
 
 # IntelliJ
 # Here we ignore everything and create exceptions for what we want to share.
