--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,30 @@
-plugins {
-    id "de.undercouch.download" version "3.2.0"
-}
-
 task wrapper(type: Wrapper) {
     gradleVersion = '3.5'
+}
+
+buildscript {
+    repositories {
+        mavenLocal()
+        jcenter()
+    }
+    dependencies {
+        classpath group: 'gchq', name: 'urlDependencyPlugin', version: 'v0.1'
+        classpath group: 'ca.cutterslade.gradle', name: 'gradle-dependency-analyze', version: '1.1.0'
+    }
 }
 
 allprojects {
     apply plugin: 'maven'
     apply plugin: 'maven-publish'
+    apply plugin: 'gchq.urldependencies'
 
     group = 'stroom'
-    version = 'v0.1.0'
+    version = 'v1.0.0'
 }
 
-ext.stroomExpressionVersion = 'v0.1.0'
+ext.versions = [
+    stroomExpression: 'v0.1.0'
+]
 
 subprojects {
     apply plugin: 'java'
@@ -68,11 +78,13 @@ project(':stroom-query-common') {
     }
 }
 
-// Manually import JARs that are not available in a Maven repository
-import de.undercouch.gradle.tasks.download.Download
-task downloadStroomExpression(type: Download) {
-    src "https://github.com/gchq/stroom-expression/releases/download/${stroomExpressionVersion}/stroom-expression-${stroomExpressionVersion}.jar"
-    dest "libs/stroom-expression-${stroomExpressionVersion}.jar"
-    onlyIfNewer true
+//lib names for urlDependenciesPlugin
+ext.urlLibs = [
+        stroomExpression: "stroom-expression-$versions.stroomExpression"
+]
+
+urlDependencies {
+    libs "${libs}"
+    compile(urlLibs.stroomExpression,
+            "https://github.com/gchq/stroom-expression/releases/download/$versions.stroomExpression/${urlLibs.stroomExpression}.jar")
 }
-assemble.dependsOn downloadStroomExpression
