--- a/stroom-query-common/build.gradle
+++ b/stroom-query-common/build.gradle
@@ -16,7 +16,7 @@
 
 dependencies {
     compile project(':stroom-query-api')
-    compile files("../libs/stroom-expression-${stroomExpressionVersion}.jar")
+    compile urlDependencies.get(urlLibs.stroomExpression)
 
     compile 'org.slf4j:slf4j-api:1.7.22'
 
