--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 language: java
 jdk: oraclejdk8
 
-script: ./gradlew downloadUrlDependencies clean build
+script: ./gradlew -Pversion=$TRAVIS_TAG downloadUrlDependencies clean build
 
 install:
  - git clone https://github.com/gchq/urlDependencies-plugin.git
