--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,7 @@ buildscript {
     }
 }
 
-//if the project has a value for the passed property (i.e from the cmd line via -PpropName=xxx)
-//use that, else use a default value
+// If the project has a value for the passed property (i.e from the cmd line via -PpropName=xxx) use that, else use a default value.
 ext.getPropertyOrDefault = { propName, defaultValue ->
     return project.hasProperty(propName) ?
             project.getProperty(propName) :
@@ -27,7 +26,7 @@ allprojects {
     apply plugin: 'gchq.urldependencies'
 
     group = 'stroom'
-    version = 'v1.0.0'
+    version = getPropertyOrDefault('version', 'SNAPSHOT')
 }
 
 ext.versions = [
