--- a/build.gradle
+++ b/build.gradle
@@ -95,3 +95,20 @@ urlDependencies {
     compile(urlLibs.stroomExpression,
             "https://github.com/gchq/stroom-expression/releases/download/$versions.stroomExpression/${urlLibs.stroomExpression}.jar")
 }
+
+task aggregatedJavadocs(type: Javadoc, description: 'Generate javadocs from all child projects as if it was a single project', group: 'Documentation') {
+	destinationDir = file("$buildDir/docs/javadoc")
+	title = "$project.name $version API"
+	options.author true
+	options.links 'http://docs.oracle.com/javase/8/docs/api/'
+	options.addStringOption 'Xdoclint:none', '-quiet'
+	
+	subprojects.each { proj ->
+		proj.tasks.withType(Javadoc).each { javadocTask ->
+			source += javadocTask.source
+			classpath += javadocTask.classpath
+			excludes += javadocTask.excludes
+			includes += javadocTask.includes
+		}
+	}
+}
