--- a/stroom-query-api/build.gradle
+++ b/stroom-query-api/build.gradle
@@ -15,7 +15,8 @@
  */
 
 plugins {
-      id "com.webcohesion.enunciate" version "2.9.1"
+    id "com.webcohesion.enunciate" version "2.9.1"
+    id 'org.hidetake.swagger.generator' version '2.4.2'
 }
 
 apply plugin: 'com.benjaminsproule.swagger'
@@ -30,6 +31,7 @@ dependencies {
     //testCompile 'io.swagger:swagger-jersey2-jaxrs:1.5.16'
     //compile 'org.springframework.boot:spring-boot-starter-jersey:+'
     //compile 'org.springframework.boot:spring-boot-starter-web:+'
+    swaggerUI 'org.webjars:swagger-ui:2.2.6'
 }
 
 swagger {
@@ -56,9 +58,11 @@ swagger {
                 name = 'Apache 2.0'
             }
         }
-        //outputPath = "${project.buildDir}/generated/document.html"
+        outputPath = "${project.buildDir}/generated/document.html"
         //swaggerDirectory = "${project.rootDir}/generated/swagger-ui"
-        swaggerDirectory = "${project.buildDir}/swagger-ui"
+        //swaggerDirectory = "${project.buildDir}/swagger-ui"
+        swaggerDirectory = "${project.buildDir}"
+        //attachSwaggerArtifact = true
     }
 }
 
@@ -76,3 +80,25 @@ tasks.enunciate {
 tasks.generateSwaggerDocumentation {
     dependsOn classes
 }
+
+validateSwagger {
+    dependsOn generateSwaggerDocumentation
+      inputFile = file("${project.buildDir}/swagger.yaml")
+}
+
+generateSwaggerUI {
+        dependsOn validateSwagger
+
+        inputFile = file("${project.buildDir}/swagger.yaml")
+
+        // Swagger UI options
+        options.docExpansion = 'full'
+        options.supportedSubmitMethods = []
+
+        // Custom header
+        header = '''\
+        <style>#header { display: none; }</style>
+        '''.stripIndent()
+}
+
+//task build(dependsOn: generateSwaggerUI)
