--- a/stroom-query-api/build.gradle
+++ b/stroom-query-api/build.gradle
@@ -36,22 +36,20 @@ dependencies {
 
 swagger {
     apiSource {
-        springmvc = false
+        springmvc = false //makes it search for jersey annotations
         outputFormats = 'json,yaml'
         locations = [ 'stroom.query.api.v2.ExampleEndpoint' ]
-        //locations = []
         schemes = [ 'http' ]
-        host = 'www.example.com:8080'
+        host = 'http://localhost:8080'
         basePath = '/v2'
         info {
-            title = 'Swagger Gradle Plugin Sample'
-            version = 'v1'
-            description = 'This is a sample.'
+            title = 'stroom-query'
+            version = 'v2'
+            description = 'An API for querying data sources including the ability to requset multiple result definitions'
             termsOfService = 'http://www.example.com/termsOfService'
             contact {
-                email = 'email@email.com'
-                name = 'Name'
-                url = 'http://www.example.com'
+                name = 'GCHQ'
+                url = 'https://github.com/gchq/stroom'
             }
             license {
                 url = 'http://www.apache.org/licenses/LICENSE-2.0.html'
@@ -59,22 +57,8 @@ swagger {
             }
         }
         outputPath = "${project.buildDir}/generated/document.html"
-        //swaggerDirectory = "${project.rootDir}/generated/swagger-ui"
-        //swaggerDirectory = "${project.buildDir}/swagger-ui"
         swaggerDirectory = "${project.buildDir}"
-        //attachSwaggerArtifact = true
     }
-}
-
-
-tasks.enunciate {
-    configFileName = "enunciate.xml"
-    File enunciateDistDir = file("dist/docs/api")
-    doFirst {
-        enunciateDistDir.deleteDir()
-        enunciateDistDir.mkdirs()
-    }
-    export("docs", enunciateDistDir)
 }
 
 tasks.generateSwaggerDocumentation {
