--- a/stroom-query-api/build.gradle
+++ b/stroom-query-api/build.gradle
@@ -15,7 +15,7 @@
  */
 
 plugins {
-    id "com.webcohesion.enunciate" version "2.9.1"
+    //id "com.webcohesion.enunciate" version "2.9.1"
     //id 'org.hidetake.swagger.generator' version '2.4.2'
 }
 
