--- a/stroom-query-common/build.gradle
+++ b/stroom-query-common/build.gradle
@@ -18,10 +18,10 @@ dependencies {
     compile project(':stroom-query-api')
     compile urlDependencies.get(urlLibs.stroomExpression)
 
-    compile 'org.slf4j:slf4j-api:1.7.22'
+    compile libs.slf4j_api
 
     // Jackson
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.8.6'
-    compile 'com.fasterxml.jackson.core:jackson-annotations:2.8.6'
-    compile 'com.fasterxml.jackson.core:jackson-core:2.8.6'
+    compile libs.jackson_databind
+    compile libs.jackson_annotations
+    compile libs.jackson_core
 }
