--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,8 @@ deploy:
     file:
       - stroom-query-api/build/libs/stroom-query-api-*.jar
       - stroom-query-common/build/libs/stroom-query-common-*.jar
+      - stroom-query-audit/build/libs/stroom-query-audit-*.jar
+      - stroom-query-hibernate/build/libs/stroom-query-hibernate-*.jar
     skip_cleanup: true
     on:
       tags: true
