--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,18 @@ task wrapper(type: Wrapper) {
     gradleVersion = '4.1'
 }
 
-// If the project has a value for the passed property (i.e from the cmd line via -PpropName=xxx) use that, else use a default value.
-ext.getPropertyOrDefault = { propName, defaultValue ->
-    return project.hasProperty(propName) ?
-            project.getProperty(propName) :
-            defaultValue
+//if the project has a value for the passed property (i.e from the cmd line via -PpropName=xxx)
+//use that, else use a default value
+ext.getPropertyOrDefault = { propName, defaultValue -> 
+    def val;
+    if (project.hasProperty(propName) && project.getProperty(propName) != "unspecified") {
+        val = project.getProperty(propName)
+        println "Using propery $propName with value $val"
+    } else {
+        val = defaultValue
+        println "Propery $propName has no value, using default value $val"
+    }
+    return val;
 }
 
 ext.versions = [
@@ -31,6 +38,8 @@ ext.urlLibs = [
     stroomExpression: "stroom-expression-$versions.stroomExpression",
     eventLogging: "event-logging-$versions.eventLogging",
 ]
+
+println "Using project version: [${versions.stroomQuery}]"
 
 //dependency strings for use in sub projects
 ext.libs = [
