--- a/stroom-query-sample/build.gradle
+++ b/stroom-query-sample/build.gradle
@@ -17,8 +17,10 @@
 apply plugin: 'com.benjaminsproule.swagger'
 
 dependencies {
+    //--------Project----------
     compile project(':stroom-query-api')
 
+    //--------3rd party--------
     compile libs.jackson_databind
     compile libs.jackson_annotations
     compile libs.jackson_core
