creating the service layer interfaces for query and doc ref management, then providing standard implementations of the rest layer

--- a/stroom-query-audit/build.gradle
+++ b/stroom-query-audit/build.gradle
@@ -26,5 +26,7 @@ dependencies {
     //--------3rd party--------
     compile libs.kafka
     compile libs.dropwizard_core
+    compile libs.dropwizard_auth
+    compile libs.dropwizard_auth_jwt
     compile libs.slf4j_api
 }
