--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ deploy:
       - stroom-query-common/build/libs/stroom-query-common-*.jar
       - stroom-query-audit/build/libs/stroom-query-audit-*.jar
       - stroom-query-hibernate/build/libs/stroom-query-hibernate-*.jar
+      - stroom-query-testing/build/libs/stroom-query-testing-*.jar
     skip_cleanup: true
     on:
       tags: true
