added a test app for the Audited Query Bundle, just need one for the Criteria one now

--- a/stroom-query-testing/build.gradle
+++ b/stroom-query-testing/build.gradle
@@ -13,6 +13,41 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+sourceSets {
+    // This lets us use different directories for our integration tests.
+    integrationTest {
+        java {
+            compileClasspath += main.output + test.output
+            runtimeClasspath += main.output + test.output
+            srcDir file('src/integration-test/java')
+        }
+        resources.srcDir file('src/integration-test/resources')
+    }
+}
+
+configurations {
+    // This means our integration tests get all the dependencies from our tests and we don't need to specify them twice.
+    integrationTestCompile.extendsFrom testCompile
+    integrationTestRuntime.extendsFrom testRuntime
+}
+
+// This task lets us run the actual integration tests.
+task integrationTest(type: Test) {
+    testClassesDir = sourceSets.integrationTest.output.classesDir
+    classpath = sourceSets.integrationTest.runtimeClasspath
+    testLogging {
+        events "standardOut", "started", "passed", "skipped", "failed"
+    }
+}
+
+// These lines pull the integration test task into our build process.
+check.dependsOn integrationTest
+integrationTest.mustRunAfter test
+
+// This means the reports from our integration tests won't over-write the reports from our unit tests.
+tasks.withType(Test) {
+    reports.html.destination = file("${reporting.baseDir}/${name}")
+}
 
 dependencies {
     //--------Project----------
@@ -26,7 +61,6 @@ dependencies {
 
     //--------3rd party--------
     compile libs.kafka
-    compile libs.dropwizard_core
     compile libs.dropwizard_auth
     compile libs.dropwizard_auth_jwt
     compile libs.slf4j_api
@@ -37,4 +71,7 @@ dependencies {
     compile libs.wiremock
 
     compile libs.dropwizard_testing
+
+    integrationTestCompile libs.dropwizard_core
+    integrationTestCompile libs.jackson_annotations
 }
