added a representative database hibernate based test

--- a/build.gradle
+++ b/build.gradle
@@ -45,12 +45,14 @@ ext.libs = [
     dropwizard_hibernate: "io.dropwizard:dropwizard-hibernate:$versions.dropwizard",
     dropwizard_auth: "io.dropwizard:dropwizard-auth:$versions.dropwizard",
     dropwizard_auth_jwt: "com.github.toastshaman:dropwizard-auth-jwt:1.0.2-0",
+    dropwizard_flyway: 'io.dropwizard.modules:dropwizard-flyway:1.0.0-1',
     dropwizard_testing: "io.dropwizard:dropwizard-testing:$versions.dropwizard",
     jackson_annotations: "com.fasterxml.jackson.core:jackson-annotations:$versions.jackson",
     jackson_core: "com.fasterxml.jackson.core:jackson-core:$versions.jackson",
     jackson_databind: "com.fasterxml.jackson.core:jackson-databind:$versions.jackson", 
     junit: "junit:junit:4.12",
     kafka: "org.apache.kafka:kafka-clients:$versions.kafka", //CDH5.10 uses kafka 10.0, Kafka <10.2 is picky about client and server versions.
+    mariadb_connector: 'org.mariadb.jdbc:mariadb-java-client:2.0.2',
     mockito_core: "org.mockito:mockito-core:2.0.2-beta",
     slf4j_api: "org.slf4j:slf4j-api:$versions.slf4j",
     swagger_annotations: "io.swagger:swagger-annotations:$versions.swagger",
