putting db tests on ignore until we can get an embedded db working

--- a/stroom-query-testing/src/integration-test/resources/hibernate/config.yml
+++ b/stroom-query-testing/src/integration-test/resources/hibernate/config.yml
@@ -1,20 +1,20 @@
 server:
   adminMinThreads: 1
   adminMaxThreads: 10
-  adminContextPath: ${ADMIN_CONTEXT_PATH:- /}
-  applicationContextPath: ${APPLICATION_CONTEXT_PATH:- /}
+  adminContextPath: /
+  applicationContextPath: /
   applicationConnectors:
-    - type: ${APPLICATION_CONNEXTOR_TYPE:- http}
-      port: ${APPLICATION_CONNEXTOR_PORT:- 8899}
+    - type:  http
+      port: 8899
   adminConnectors:
-    - type: ${ADMIN_CONNEXTOR_TYPE:- http}
-      port: ${ADMIN_CONNEXTOR_PORT:- 8900}
+    - type: http
+      port: 8900
 
 database:
   driverClass: org.mariadb.jdbc.Driver
-  user: ${DB_USER:- stroomuser}
-  password: ${DB_PASSWORD:- stroompassword1}
-  url: ${DB_URL:- jdbc:mariadb://localhost:3310/annotations}
+  user: stroomuser
+  password: stroompassword1
+  url: jdbc:mariadb://localhost:3310/annotations
   properties:
     charSet: UTF-8
     hibernate.dialect: org.hibernate.dialect.MySQLInnoDBDialect
@@ -22,7 +22,7 @@ database:
     hibernate.hbm2ddl.auto: validate
 
 logging:
-  level: ${LOGGING_LEVEL:- ERROR}
+  level: ERROR
   loggers:
     stroom: DEBUG
     io.dropwizard: INFO
