--- a/stroom-query-testing/build.gradle
+++ b/stroom-query-testing/build.gradle
@@ -77,4 +77,5 @@ dependencies {
     integrationTestCompile libs.dropwizard_flyway
     integrationTestCompile project(':stroom-query-hibernate')
     integrationTestRuntime libs.mariadb_connector
+    integrationTestRuntime 'org.apache.derby:derby:10.8.2.2'
 }
