--- a/stroom-query-testing/src/integration-test/resources/hibernate/config.yml
+++ b/stroom-query-testing/src/integration-test/resources/hibernate/config.yml
@@ -14,7 +14,7 @@ database:
   driverClass: org.mariadb.jdbc.Driver
   user: stroomuser
   password: stroompassword1
-  url: jdbc:mariadb://localhost:3310/annotations
+  url: jdbc:mariadb://localhost:4410/test
   properties:
     charSet: UTF-8
     hibernate.dialect: org.hibernate.dialect.MySQLInnoDBDialect
