make fifo log appender thread safe, tune the logging and db connection pools

--- a/stroom-query-testing/src/integration-test/resources/generic/config.yml
+++ b/stroom-query-testing/src/integration-test/resources/generic/config.yml
@@ -19,6 +19,7 @@ logging:
     org.flywaydb: INFO
     "AUDIT":
       level: INFO
+      additive: false
       appenders:
         - type: fifo
   appenders:
